feat(v1.25 § 9.5 Phase E): Scala 3 native Spark Encoder derivation
Unblocks Dataset[CaseClass] on Scala 3 + Spark _2.13 end-to-end.

Discovery: Apache Spark publishes only `_2.13` JARs and its encoder
derivation for product types uses Scala 2.13's
`scala.reflect.runtime.universe.TypeTag` — synthesised by a Scala 2
macro that Scala 3 cannot provide.  Pre-Phase-E the typed C.3 #9
schema bridge and Phase D `@SqlFn` auto-emit compiled but blew up at
runtime; every example dodged via SQL `VALUES` seeding.

Investigation found three independent fixes are all required:

1. Scala 3.8.x has a TASTy-bridge regression that breaks Spark
   `_2.13` runtime reflection (`scala.reflect.internal.FatalError:
   class Array does not have a member apply`).  Scala 3.7.1 is the
   latest series that works.  SparkGen now pins
   `//> using scala 3.7.1` in the emitted source.

2. Spark needs a battery of JDK 17+ `--add-opens` flags
   (`sun.nio.ch`, `java.lang.reflect`, etc.) to access internal
   classes.  Emitted as `//> using javaOpt` directives so
   `scala-cli run <file>` works without command-line args.

3. The real Encoder derivation, via a top-level
   `object SscSparkEncoders` in the emitted source:
   - `given Encoder[String / Int / Long / Double / Boolean / Float
     / Short / Byte]` wrap Spark's pre-baked primitive encoders —
     replace the TypeTag-bound implicits `spark.implicits._` would
     have provided.
   - `inline given derived[T <: Product](using Mirror.ProductOf[T],
     ClassTag[T]): Encoder[T]` builds
     `AgnosticEncoders.ProductEncoder[T]` from Scala 3 `Mirror`
     (field names + types + nullability), then wraps in
     `ExpressionEncoder(...)`.  No TypeTag, no macros, no
     third-party libs.

`import spark.implicits._` is dropped from the emitted `@main`
scope (it brings in a TypeTag-bound `newProductEncoder` that
poisons every implicit search for `Encoder[T]`) and replaced by
`import SscSparkEncoders.given`.

End-to-end verified: `examples/spark-encoder-d